--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.12",
+    "gunicorn>=23.0.0",
     "phonenumbers>=9.0.2",
+    "uvicorn[standart]>=0.34.0",
 ]
